feat: replace placeholder images with actual app icons
- Add brain_with_x.png as favicon and app icons (192, 512, apple-touch)
- Add social_media_share_preview.png as OG image for social sharing
- Update all meta tags to reference .png files instead of .svg placeholders
- Update manifest.json with PNG icon references
- Keep SVG placeholders as fallbacks
- Icons now show proper branding across all platforms

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="alternate icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,7 +27,7 @@
     <meta property="og:url" content="https://theaihubx.com/" />
     <meta property="og:title" content="TheAIHubX - Discover, Compare, and Master AI Tools" />
     <meta property="og:description" content="Find all your essential AI tools in one place. Explore, compare, and learn to master AI with curated tools and structured learning paths." />
-    <meta property="og:image" content="https://theaihubx.com/og-image.png.svg" />
+    <meta property="og:image" content="https://theaihubx.com/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="TheAIHubX - Your Complete AI Learning Hub" />
@@ -37,7 +38,7 @@
     <meta name="twitter:url" content="https://theaihubx.com/" />
     <meta name="twitter:title" content="TheAIHubX - Discover, Compare, and Master AI Tools" />
     <meta name="twitter:description" content="Find all your essential AI tools in one place. Explore, compare, and learn to master AI with curated tools and structured learning paths." />
-    <meta name="twitter:image" content="https://theaihubx.com/og-image.png.svg" />
+    <meta name="twitter:image" content="https://theaihubx.com/og-image.png" />
     <meta name="twitter:image:alt" content="TheAIHubX - Your Complete AI Learning Hub" />
     <meta name="twitter:creator" content="@theaihubx" />
     <meta name="twitter:site" content="@theaihubx" />
@@ -49,12 +50,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="TheAIHubX" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png.svg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     
     <!-- Additional Icons -->
-    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png.svg" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png.svg" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png" />
     
     <title>TheAIHubX - Discover, Compare, and Master AI Tools</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
