--- a/index.html
+++ b/index.html
@@ -62,6 +62,29 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyDWeKWB8WqbTlmOvBQQ4uvcWGoOSHYJrVw",
+        authDomain: "aihubx.firebaseapp.com",
+        projectId: "aihubx",
+        storageBucket: "aihubx.firebasestorage.app",
+        messagingSenderId: "408813296254",
+        appId: "1:408813296254:web:bbbf6497c459198e13962f",
+        measurementId: "G-D0JG1MTB2P"
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
   </body>
 </html>
 
