Add custom glassmorphism 404.html for Firebase Hosting

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <!-- Content Security Policy -->
-    <meta http-equiv="Content-Security-Policy" 
-          content="default-src 'self'; 
-                   script-src 'self' 'unsafe-inline' 'unsafe-eval'; 
-                   style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-                   img-src 'self' data: https: blob:;
-                   font-src 'self' https://fonts.gstatic.com;
-                   connect-src 'self' https:;
-                   frame-ancestors 'none';
-                   base-uri 'self';
-                   form-action 'self';">
+        <!-- Content Security Policy -->
+        <meta http-equiv="Content-Security-Policy"
+          content="default-src 'self';
+           script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com https://www.googleapis.com;
+           style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+           img-src 'self' data: https: blob:;
+           font-src 'self' https://fonts.gstatic.com;
+           connect-src 'self' https: https://www.googleapis.com;
+           frame-ancestors 'none';
+           base-uri 'self';
+           form-action 'self';">
     
     <meta name="description" content="Find all your essential AI tools in one place. Explore, compare, and learn to master AI with curated tools and structured learning paths." />
     <meta name="keywords" content="AI tools, artificial intelligence, AI learning, AI courses, AI hub, ChatGPT, machine learning, AI resources" />
